[project]
name = "swli-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "ipykernel>=6.29.5",
    # "cupy-cuda12x>=13.3.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.8.0",
    "rerun-sdk>=0.21.0",
    "scalene>=1.5.51",
    "scipy>=1.15.1",
    "torch>=2.5.1",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.47.1",
]



[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
